--- a/src/main/resources/templates/comunicazione/comunicazioneDashboard.html
+++ b/src/main/resources/templates/comunicazione/comunicazioneDashboard.html
@@ -13,6 +13,7 @@
 						<h2 th:text="#{label.comunicazioni_dashboard}"></h2>
 						<div class="pull-right buttons-header">
 							<a class="btn btn-success pull-right"
+									th:if="${canSendComunicazione}"
 									th:href="@{/comunicazione/new}"
 									th:text="#{label.componi}">Componi</a>
 							<a class="btn btn-primary pull-right"
@@ -36,7 +37,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
+							<div class="col-xs-12 col-sm-12 col-md-6 col-lg-4" th:if="${canSendComunicazione}">
 								<div class="tile-stats clickable" onclick="goTo('comunicazione/sent/list')">
 									<div class="icon"><i class="fa fa-paper-plane"></i></div>
 									<div class="col-xs-10">
