--- a/src/main/resources/templates/comunicazione/comunicazioneList.html
+++ b/src/main/resources/templates/comunicazione/comunicazioneList.html
@@ -34,7 +34,7 @@
 								</thead>
 								<tbody>
 									<tr th:each="comunicazione, row : ${listaComunicazioni}">
-										<td><a th:text="${#temporals.format(comunicazione.dataUltimaModifica, 'HH:mm - dd/MM/yyyy')}" th:href="@{|/comunicazione/${comunicazione.id}/show|}"></a></td>
+										<td><a th:text="${#temporals.format(comunicazione.dataUltimaModifica, 'dd/MM/yyyy - HH:mm')}" th:href="@{|/comunicazione/${comunicazione.id}/show|}"></a></td>
 										<td th:text="${comunicazione.mittente.getFullName()}"></td>
 										<td>
 											<div th:each="destinatario, row : ${comunicazione.destinatari}" th:if="${row.index &lt; 3}">
