--- a/src/main/resources/templates/comunicazione/comunicazioneList.html
+++ b/src/main/resources/templates/comunicazione/comunicazioneList.html
@@ -13,7 +13,7 @@
 						<h2 th:text="#{label.lista_comunicazioni_tipo(#{__${tipologiaLista}__})}"></h2>
 						<div class="pull-right buttons-header">
 							<a class="btn btn-primary pull-right"
-									th:href="@{/comunicazione/dashboard}"
+									th:href="@{__${returnLink}__}"
 									th:text="#{label.indietro}">Indietro</a>
 						</div>
 						<div class="clearfix"></div>
