--- a/src/main/resources/templates/provider/providerList.html
+++ b/src/main/resources/templates/provider/providerList.html
@@ -14,7 +14,7 @@
 						<div class="clearfix"></div>
 					</div>
 					<div class="x_content">
-						<table th:unless="${#lists.isEmpty(providerList)}" id="datatable-provider" class="table table-striped table-bordered dt-responsive nowrap datatable-responsive" cellspacing="0" width="100%">
+						<table th:unless="${#lists.isEmpty(providerList)}" id="datatable-provider" class="table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
 							<thead>
 								<tr>
 									<th th:text="#{label.denominazione_legale}">Denominazione legale</th>
@@ -23,6 +23,7 @@
 									<th th:text="#{label.caninsert_piano_formativo}">Inserimento Piano Formativo</th>
 									<th th:text="#{label.caninsert_eventi}">Inserimento Eventi</th>
 									<th th:text="#{label.caninsert_domanda_accreditamento_standard}">Inserimento Domanda Accreditamento Standard</th>
+									<th th:text="#{label.azioni}">Azioni</th>
 								</tr>
 							</thead>
 							<tbody th:unless="${#lists.isEmpty(providerList)}" th:remove="all-but-first">
@@ -33,6 +34,9 @@
 									<td th:text="${provider.canInsertPianoFormativo ? #messages.msg('label.abilitato') : #messages.msg('label.non_abilitato')}" th:class="${provider.canInsertPianoFormativo ? 'green' : 'red'}">abilitato/non abilitato</td>
 									<td th:text="${provider.canInsertEvento ? #messages.msg('label.abilitato') : #messages.msg('label.non_abilitato')}" th:class="${provider.canInsertEvento ? 'green' : 'red'}">abilitato/non abilitato</td>
 									<td th:text="${provider.canInsertAccreditamentoStandard ? #messages.msg('label.abilitato') : #messages.msg('label.non_abilitato')}" th:class="${provider.canInsertAccreditamentoStandard ? 'green' : 'red'}">abilitato/non abilitato</td>
+									<td>
+										<a th:href="@{|/provider/${provider.id}/comunicazione/list|}" class="btn btn-primary" th:title="#{label.comunicazioni_provider}"><i class="fa fa-comments"> </i></a>
+									</td>
 								</tr>
 							</tbody>
 						</table>
@@ -44,6 +48,25 @@
 					</div>
 				</div>
 			</div>
+			<script th:inline="javascript">
+			/*<![CDATA[*/
+
+				$(document).ready(function() {
+					$("#datatable-provider").DataTable({
+						"bFilter" : false,
+						"bInfo" : false,
+						"bPaginate" : false,
+						"ordering" : false,
+						"columnDefs": [ {
+							"targets": 6,
+							"width": "1px",
+							"sClass": "center"
+						} ],
+					});
+				})
+
+			/*]]>*/
+			</script>
 		</div>
 	</div>
 </body>
