Finestra modale addAttivita resa draggable

--- a/src/main/resources/templates/evento/eventoFADEdit.html
+++ b/src/main/resources/templates/evento/eventoFADEdit.html
@@ -1193,6 +1193,10 @@
 				});
 
 				function initAll(){
+					
+					$("#add-attivitaFAD-modal").draggable({
+					    handle: ".modal-header"
+					}); 
 
 					$('input.flat').iCheck({
 			            checkboxClass: 'icheckbox_flat-green',
