--- a/src/main/resources/templates/evento/eventoFSCEdit.html
+++ b/src/main/resources/templates/evento/eventoFSCEdit.html
@@ -1306,6 +1306,11 @@
 				});
 
 				function initAll(){
+					
+					$("#add-attivitaFSC-modal").draggable({
+					    handle: ".modal-header"
+					}); 
+					
 					$('input.flat').iCheck({
 			            checkboxClass: 'icheckbox_flat-green',
 			            radioClass: 'iradio_flat-green'
