--- a/src/main/resources/templates/evento/eventoRESEdit.html
+++ b/src/main/resources/templates/evento/eventoRESEdit.html
@@ -1446,6 +1446,10 @@
 				});
 
 				function initAll(){
+					
+					$("#add-attivitaRES-modal").draggable({
+					    handle: ".modal-header"
+					}); 
 
 					$('input.flat').iCheck({
 			            checkboxClass: 'icheckbox_flat-green',
