--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -107,6 +107,10 @@
 		<th:block 
 			th:include="fragments/common-allegatiext :: common">
 		</th:block>
+		
+		<!-- jquery ui per modale draggable -->
+		<script src="../static/js/jquery-ui.js"
+				th:src="@{/js/jquery-ui.js}"></script>
 			
 		<!-- initialize the validator.js  -->
 		<script th:inline="javascript">
